# museum

./: .gitignore  CONTRIBUTION.md
docs/: database_schema.dbml  database_schema_ru.dbml
frontend/: CONTRIBUTORS.md  README.md  package-lock.json  package.json  serve-build.js
frontend/public/: index.html
frontend/public/tour/: index.html  main.js  style.css
frontend/src/: index.js
frontend/src/app/: App.jsx
server/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env.example  manage.py  pyproject.toml  servers.json
server/artifacts/: admin.py  models.py  serializers.py  urls.py  views.py
server/artifacts/migrations/: 0001_initial.py  0002_artifact_primary_image.py
server/chatbot/: README.md  admin.py  llm_service.py  models.py  prompts.py  search_service.py  serializers.py  urls.py  views.py
server/chatbot/migrations/: 0001_initial.py
server/historical_figures/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/historical_figures/migrations/: 0001_initial.py  0002_historicalfigure_primary_image.py
server/museum/: admin.py  asgi.py  env.example  settings.py  urls.py  wsgi.py
server/museum/management/commands/: load_sample_data.py  setup_groups.py
server/shared/: admin.py  models.py  serializers.py  urls.py  views.py
server/shared/migrations/: 0001_initial.py  0002_remove_image_url_remove_model3d_url_image_image_and_more.py  0003_image_focus_point.py
server/static/admin/css/: admin_custom.css  image_focus.css
server/static/admin/js/: image_focus.js
server/templates/admin/: base_site.html  index.html
(+80 files in other folders)
